--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/43daf91e79.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,9 +20,11 @@
         <a class="navbar-brand">Profile Page</a>
       </div>
         <div class="navbar-header" style="float: right">
-          <a href="/logout" class="btn btn-primary my-2 my-sm-0">Logout</a>
+          <a href="/logout" class="btn btn-success">Logout</a>
         </div>
+        
     </nav>
+   
 
     <div class="row">
 
@@ -102,15 +107,8 @@
                     <span class="list-group-item">
                       <%= list[i].msg %>
                     </span>
-                    <% if(list[i].checkBox===true) { %>
-                      <span class="list-group-item"><i class="fa-regular fa-square check-green" data-checkbox="true"
-                          aria-hidden="true"></i></span>
-                      <% } else { %>
-                        <span class="list-group-item"><i class="fa-regular fa-square check-regular"
-                            data-checkbox="false" aria-hidden="true"></i></span>
-                        <% } %>
-
-                          <span class="list-group-item"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+                    <span class="list-group-item"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+                    <span><button onclick ="edit('<%= list[i]._id %>')">Edit Your Message</button></span>
                   </li>
                   <% } %>
 
@@ -138,30 +136,23 @@
                     <span class="list-group-item">
                       <%= list[i].msg %>
                     </span>
-                    <% if(list[i].checkBox===true) { %>
-                      <span class="list-group-item"><i class="fa-regular fa-square check-green" data-checkbox="true"
-                          aria-hidden="true"></i></span>
-                      <% } else { %>
-                        <span class="list-group-item"><i class="fa-regular fa-square check-regular"
-                            data-checkbox="false" aria-hidden="true"></i></span>
-                        <% } %>
-
-                          <span class="list-group-item"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+                    <span class="list-group-item"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+                    <span><button onclick ="edit('<%= list[i]._id %>')">Edit Your Message</button></span>
                   </li>
                   <% } %>
 
-                    <% } %>
+                  <% } %>
             </ul>
           </div>
 
           <!-- container for philadelphia category -->
           <div class="collectionContainer">
             <h4>Philadelphia</h4>
-            <ul class="philadelphiaCollection .list-group-flush">
+            <ul class="philadelphiaCollection list-group-flush">
               <% for(var i=0; i <list.length; i++) {%>
-                <% if(list[i].dropDown==="dropDown_philadelphia" ) { %>
+                <% if(list[i].dropDown==="dropDown_philadelphia") { %>
                   <li class="phillyJobs list-group-item">
-                    <<span class="list-group-item">
+                    <span class="list-group-item">
                       <%= list[i].name %>
                     </span>
                     <span class="list-group-item">
@@ -173,14 +164,9 @@
                     <span class="list-group-item">
                       <%= list[i].msg %>
                     </span>
-                    <% if(list[i].checkBox===true) { %>
-                      <span class="list-group-item"><i class="fa-regular fa-square check-green" data-checkbox="true"
-                          aria-hidden="true"></i></span>
-                      <% } else { %>
-                        <span class="list-group-item"><i class="fa-regular fa-square check-regular"
-                            data-checkbox="false" aria-hidden="true"></i></span>
-                        <% } %>
-                          <span class="list-group-item"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+                    
+                    <span class="list-group-item"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+                    <span><button onclick ="edit('<%= list[i]._id %>')">Edit Your Message</button></span>
                   </li>
                   <% } %>
 
@@ -209,14 +195,8 @@
                       <%= list[i].msg %>
                     </span>
 
-                    <% if(list[i].checkBox===true) { %>
-                      <span class="list-group-item"><i class="fa-regular fa-square check-green" data-checkbox="true"
-                          aria-hidden="true"></i></span>
-                      <% } else { %>
-                      <span class="list-group-item"><i class="fa-regular fa-square check-regular"
-                            data-checkbox="false" aria-hidden="true"></i></span>
-                      <% } %>
-                      <span class="list-group-item"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+                    <span class="list-group-item"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+                    <span><button onclick ="edit('<%= list[i]._id %>')">Edit Your Message</button></span>
                   </li>
                   <% } %>
 
